@@ -2,7 +2,6 @@
 
  - user groups
  - start&end time in time navigation
- - add Igor's patches
 
  - different colors and line styles for map connectors
 
